[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-telegram-orchestrator"
version = "0.1.0"
description = "Telegram bot that submits and manages Codex jobs on a server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
codex-telegram-bot = "codex_telegram.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
